--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
     "name": "yamli-cache",
     "version": "1.0.2",
     "description": "A cache for Yamli to avoid remote lookups unnecessarily.",
-    "main": "dist/main.js",
+    "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "source": "src/index.ts",
     "type": "module",
     "scripts": {
-        "build": "parcel build src/index.ts",
+        "build": "tsdown",
+        "lint": "biome check .",
         "test": "bun test --coverage"
     },
     "keywords": [
@@ -27,26 +28,16 @@
     "author": "Ragaeeb Haq",
     "license": "MIT",
     "files": [
-        "dist/main.js",
-        "dist/main.js.map",
+        "dist/index.js",
+        "dist/index.js.map",
         "dist/*.d.ts"
     ],
     "devDependencies": {
-        "@eslint/js": "^9.14.0",
-        "@parcel/packager-ts": "^2.12.0",
-        "@parcel/transformer-typescript-types": "^2.12.0",
+        "@biomejs/biome": "^2.3.5",
         "@semantic-release/changelog": "^6.0.3",
-        "@types/bun": "^1.1.13",
-        "@types/eslint__js": "^8.42.3",
-        "dotenv-vault": "^1.26.2",
-        "eslint": "^9.14.0",
-        "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-import-x": "^4.4.0",
-        "eslint-plugin-perfectionist": "^3.9.1",
-        "eslint-plugin-prettier": "^5.2.1",
-        "parcel": "^2.12.0",
-        "prettier": "^3.3.3",
-        "semantic-release": "^24.2.0",
-        "typescript-eslint": "^8.13.0"
+        "@types/bun": "^1.3.2",
+        "semantic-release": "^25.0.2",
+        "tsdown": "^0.16.4",
+        "typescript": "^5.9.3"
     }
 }
